objects/Playground_Enviroment__c.object
<CustomObject>
    <fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorization_URL__c</fullName>
        <label>Authorization URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InstanceUrl__c</fullName>
        <label>InstanceUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org Credential</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Playground Environments</relationshipLabel>
        <relationshipName>Playground_Environments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Org_Id__c</fullName>
        <label>Org Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playground__c</fullName>
        <label>Playground</label>
        <referenceTo>Playground__c</referenceTo>
        <relationshipLabel>Playground Environments</relationshipLabel>
        <relationshipName>Playground_Environments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CoE_Org</fullName>
                    <label>CoE Org</label>
                </value>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
                <value>
                    <fullName>Scratch_Org</fullName>
                    <label>Scratch Org</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Playground Environment</label>
    <nameField>
        <label>Playground Enviroment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Playground Environments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>